--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "socket.io": "^4.8.3",
+    "ts-node-dev": "^2.0.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
